--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.team4.dttaskmanager"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.0.1(beta)" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -32,10 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.team4.activities.MainActivity"
-            android:clearTaskOnLaunch="true" >
-        </activity>
+        <activity android:name="com.team4.activities.MainActivity" />
     </application>
 
 </manifest>
